# BaatCheet2.0

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  temp.txt  tsconfig.json  vitest.config.ts
.github/workflows/: main.yml
convex/: calls.ts  conversations.ts  counter.ts  cron.ts  linkPreviews.ts  livekit.ts  lobby.ts  messages.ts  presence.ts  schema.ts  storage.ts  typing.ts  users.ts  users_internal.ts  voicePresence.ts
docs/: coturn-deployment.md  livekit-deployment.md  phase-7-performance-evidence.md
specs/: mission.md  roadmap.md  tech-stack.md
specs/2026-07-05-scaffold/: plan.md  requirements.md  validation.md
specs/2026-07-06-auth-discord-oauth2-pkce/: plan.md  requirements.md  validation.md
specs/2026-07-06-dm-text/: plan.md  requirements.md  validation.md
specs/2026-07-06-presence/: plan.md  requirements.md  validation.md
specs/2026-07-07-voice-1-1/: plan.md  requirements.md  validation.md
specs/2026-07-08-hangout-lobby-text/: plan.md  requirements.md  validation.md
specs/2026-07-09-hangout-lobby-voice-livekit/: plan.md  requirements.md  validation.md
specs/2026-07-09-theme-performance-updater/: plan.md  requirements.md  validation.md
specs/2026-07-10-post-production-0-1-0-fixes/: plan.md  requirements.md  (+1 more)
src/: App.tsx  auth.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: mod.rs  oauth.rs  pkce.rs  profile.rs  session.rs  store.rs
(+46 files in other folders)
