[package]
name = "baatcheet"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "baatcheet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Phase 1 — Auth (Discord OAuth2 + PKCE)
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
keyring = "3"
dirs = "6"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time"] }
subtle = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-global-shortcut = "2"
